<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">运动干预平台</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="order_method">排序方式</string>
    <string name="attendance">签到</string>
    <string name="single">个人</string>
    <string name="remind">提醒</string>
    <string name="classes">班级</string>
    <string name="show_class_daily_motion">查看班级统计</string>
    <string name="show_class_cur_motion">查看班级统计</string>
    <string name="title_activity_announcement">公告</string>
    <string name="title_head_announcement">公告栏</string>
    <string name="title_history_announcement">历史公告</string>
    <string name="description_splitline">历史公告</string>
    <string name="delete">删除</string>
    <string name="new_announcement">新公告</string>
    <string name="title_announcement_content">公告内容</string>
    <string name="title_announcement_author">发布人</string>
    <string name="title_announcement_time">发布时间</string>
    <string name="announcemnt_list_empty">没有更多的公告</string>
    <string name="news_list_empty">没有更多的新闻</string>
    <string name="remind_list_empty">没有更多的待提醒学生</string>
    <string name="publish_announcement">公告发布</string>
    <string name="save_announcement">保存公告</string>
    <string name="save_new_announcement">保存新公告</string>
    <string name="send_announcement">发送公告</string>
    <string name="title_activity_send_announcement">发布公告</string>
    <string name="title_activity_show_announcement">查看公告</string>
    <string name="list_detail_empty">暂无已保存的公告</string>
    <string name="student_weight">体重:</string>
    <string name="steps">步数:</string>
    <string name="remain_power">剩余电量:</string>
    <string name="device_id">设备标识:</string>
    <string name="choose">时间选择:</string>
    <string name="count">数据统计</string>
    <string name="current_student_energy">学生能耗:</string>
    <string name="current_class_avg_energy">班级平均能耗:</string>
    <string name="CheckNotice_title">活动名称</string>
    <string name="CheckNotice_name">姓名</string>
    <string name="CheckNotice_time">时间</string>
    <string name="CheckNotice_content">内容正文</string>
    <string name="Noticesubmit_send">发布公告</string>
    <string name="number">学号</string>
    <string name="student_name">学生姓名</string>
    <string name="energy">运动量</string>
    <string name="unfinish">未完成</string>
    <string name="send_remind">发送提醒</string>
    <string name="history_remind">历史提醒</string>
    <string name="remindall">全部自动提醒</string>
    <string name="title_activity_main_page">MainPageActivity</string>
    <string name="class_name">班级名称：</string>
    <string name="qualify_num">合格人数:</string>
    <string name="disqualify_num">不合格人数:</string>
    <string name="now_avg_energy">当前平均能耗:</string>
    <string name="ready">出勤学生</string>
    <string name="notready">缺勤学生</string>
    <string name="detect">出勤检测</string>
    <string name="start">开始上课</string>
    <string name="sex">性别</string>
    <string name="energy_use">能量消耗(卡路里)</string>
    <string name="ready_empty_hint">没有出勤学生</string>
    <string name="notready_empty_hint">没有缺勤学生</string>

</resources>