<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_checknotice"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/CheckNotice_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp" >

        <TextView
            android:id="@+id/tv_announcement_title"
            android:layout_width="700dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:text="@string/CheckNotice_title"
            android:textColor="#191970"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_announcement_publisher"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/tv_announcement_publishTime"
            android:layout_toRightOf="@+id/tv_announcement_title"
            android:gravity="center"
            android:text="@string/CheckNotice_name"
            android:textColor="#191970"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tv_announcement_publishTime"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="55dp"
            android:gravity="center"
            android:text="@string/CheckNotice_time"
            android:textColor="#191970"
            android:textSize="24sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_announcement_content"
        android:layout_width="fill_parent"
        android:layout_height="460dp"
        android:padding="130dp"
        android:text="@string/CheckNotice_content"
        android:textColor="#191970"
        android:textSize="24sp" />



</LinearLayout>