<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_weight="11"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:paddingTop="6dip" >

                <SearchView
                    android:id="@+id/searchName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true" >
                </SearchView>

                <Button
                    android:id="@+id/remindAll_btn"
                    android:layout_width="200dp"
                    android:layout_height="80dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:textSize="27sp"
                         android:textColor="#191970"/>           
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.61"
                    android:gravity="center"
                    android:text="@string/number"
                    android:textColor="#191970"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.39"
                    android:gravity="center"
                    android:text="@string/student_name"
                    android:textColor="#191970"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/sex"
                        android:textColor="#191970"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.79"
                    android:gravity="center"
                    android:text="@string/energy"
                    android:textColor="#191970"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="@string/energy_use"
                     android:textColor="#191970"
                     android:textSize="26sp"
                     android:textStyle="bold" />
                
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.67"
                    android:gravity="center"
                    android:text="@string/unfinish"
                    android:textColor="#191970"
                    android:textSize="26sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.36"
                    android:gravity="center"
                    android:text="@string/remind"
                    android:textColor="#191970"
                    android:textSize="26sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ListView
                android:id="@+id/detailList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:choiceMode="singleChoice"
                android:background="@drawable/bg_round" >
            </ListView>

            <TextView
                android:id="@+id/tv_remind_list_empty"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/remind_list_empty"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>