<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">
    
    <Spinner
        android:id="@+id/choose_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|right"
        android:textColor="#000080"
        android:textSize="24sp"
        android:textStyle="bold" 
        android:layout_marginRight="80dp"
        android:spinnerMode="dropdown"
        android:layout_marginTop="20dp"/>
    
    <LinearLayout
        android:layout_width="1000dp"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:baselineAligned="false"
        android:orientation="horizontal" >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/ready"
                android:textSize="30sp"
                android:textColor="#000"
                android:paddingLeft="195dp"
                android:paddingTop="20dp"/>
            <ListView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7.2"
                android:id="@+id/yes"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:cacheColorHint="@color/transparent"
                android:background="@drawable/bg_round" />
            <TextView 
                android:id="@+id/tv_ready_empty_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ready_empty_hint"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:paddingLeft="165dp"
                android:paddingTop="200dp"
                android:visibility="gone" 
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_round" />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/notready"
               android:layout_gravity="center_vertical"
               android:textSize="30sp"
                android:textColor="#000"
               android:paddingLeft="195dp"
                android:paddingTop="20dp"/>
            <ListView 
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7.2"
                android:id="@+id/no"
                android:layout_marginLeft="30dp"
                android:cacheColorHint="@color/transparent"
                android:background="@drawable/bg_round" />
            <TextView 
                android:id="@+id/tv_notready_empty_hint"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notready_empty_hint"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:paddingLeft="165dp"
                android:paddingTop="200dp"
                android:visibility="gone" 
                android:layout_marginRight="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="7dp"
                android:background="@drawable/bg_round" />
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="69dp"
        android:orientation="horizontal" 
        android:layout_marginLeft="690dp">
        
        <Button 
            style="?android:attr/buttonBarButtonStyle" 
            android:text="@string/detect"
            android:id="@+id/btn_detect"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:textSize="24sp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <Button 
            style="?android:attr/buttonBarButtonStyle" 
            android:id="@+id/btn_start"
            android:text="@string/start"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="24sp"/>
    </LinearLayout>

</LinearLayout>