<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="bottom"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginTop="34dp"
        android:layout_weight="0.7" >

        
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="7.5"
        android:orientation="horizontal" >

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="17"
            android:background="@drawable/over" >

            <LinearLayout
                android:id="@+id/layout_zxt"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_weight="16.82" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dip"
                android:layout_weight="5"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginTop="28dip"
                    android:layout_weight="1.41"
                    android:text="@string/count"
                    android:textColor="#002265"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                   
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|left"
                        android:text="@string/qualify_num"
                        android:textColor="#002C86"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_qualify"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:layout_marginLeft="5dp"
                        android:gravity="bottom"
                        android:textColor="#002C86"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|left"
                        android:text="@string/disqualify_num"
                        android:textColor="#002C86"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_disqualify"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:layout_marginLeft="5dp"
                        android:gravity="bottom"
                        android:textColor="#002C86"
                        android:textSize="20sp" />
                </LinearLayout>
                
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >
                    
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom|left"
                        android:text="@string/now_avg_energy"
                        android:textColor="#002C86"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_motion_class_avg_energy"
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.00"
                        android:layout_marginLeft="5dp"
                        android:gravity="bottom"
                        android:textColor="#002C86"
                        android:textSize="20sp" />
                    
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dip"
                    android:layout_weight="1.9" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.9" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="70dp"
        android:layout_marginRight="70dp"
        android:layout_weight="0.8" >

        
    </RelativeLayout>

</LinearLayout>